--- a/src/template.html
+++ b/src/template.html
@@ -6,193 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BATTLESHIP</title>
+    <title>PORTFOLIO</title>
 </head>
 <body>
-    <div id="loadingScreen"></div>
-    
-    <div id="gameScreen">
-        <header></header>
-
-        <div id="leftSidebar">
-            <div class="leftPanel">
-                <div class="shipStatus">
-                    <div class="carrierStatusWrap shipWrap">
-                        <div class="coordStatus">
-                            <div class="carrier1"></div>
-                            <div class="carrier2"></div>
-                            <div class="carrier3"></div>
-                            <div class="carrier4"></div>
-                            <div class="carrier5"></div>
-                        </div>
-                        <div class="carrierStatus">
-                            <img src="./images/carrierLeft.png" alt="carrier left">
-                        </div>
-                    </div>
-                    <div class="battleshipStatusWrap shipWrap">
-                        <div class="coordStatus">
-                            <div class="battleship1"></div>
-                            <div class="battleship2"></div>
-                            <div class="battleship3"></div>
-                            <div class="battleship4"></div>
-                        </div>
-                        <div class="battleshipStatus">
-                            <img src="./images/battleshipLeft.png" alt="battleship left">
-                        </div>
-                    </div>
-                    <div class="cruiserStatusWrap shipWrap">
-                        <div class="coordStatus">
-                            <div class="cruiser1"></div>
-                            <div class="cruiser2"></div>
-                            <div class="cruiser3"></div>
-                        </div>
-                        <div class="cruiserStatus">
-                            <img src="./images/cruiserLeft.png" alt="cruiser left">
-                        </div>
-                    </div>
-                    <div class="submarineStatusWrap shipWrap">
-                        <div class="coordStatus">
-                            <div class="submarine1"></div>
-                            <div class="submarine2"></div>
-                            <div class="submarine3"></div>
-                        </div>
-                        <div class="submarineStatus">
-                            <img src="./images/submarineLeft.png" alt="submarine left">
-                        </div>
-                    </div>
-                    <div class="destroyerStatusWrap shipWrap">
-                        <div class="coordStatus">
-                            <div class="destroyer1"></div>
-                            <div class="destroyer2"></div>
-                        </div>
-                        <div class="destroyerStatus">
-                            <img src="./images/destroyerLeft.png" alt="destroyer left">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="actionStatus">
-                    <div class="indicatorBox">
-                        <div class="turnIndicator"></div>
-                    </div>
-                    <div class="infoBox">
-                        <div class="instruction"></div>
-                        <div class="status"></div>
-                    </div>
-                </div>
-
-                <div class="forfeit">
-                    <button class="start">PLAY</button>
-                    <button class="stop">FORFEIT</button>
-                </div>
-            </div>
-        </div>
-
-        <div id="rightSidebar">
-            <div class="rightPanel">
-                <div class="shipStatus">
-                    <div class="carrierStatusWrap shipWrap">
-                        <div class="carrierStatus">
-                            <img src="./images/carrierRight.png" alt="carrier right">
-                        </div>
-                        <div class="coordStatus">
-                            <div class="carrier1"></div>
-                            <div class="carrier2"></div>
-                            <div class="carrier3"></div>
-                            <div class="carrier4"></div>
-                            <div class="carrier5"></div>
-                        </div>
-                    </div>
-                    <div class="battleshipStatusWrap shipWrap">
-                        <div class="battleshipStatus">
-                            <img src="./images/battleshipRight.png" alt="battleship right">
-                        </div>
-                        <div class="coordStatus">
-                            <div class="battleship1"></div>
-                            <div class="battleship2"></div>
-                            <div class="battleship3"></div>
-                            <div class="battleship4"></div>
-                        </div>
-                    </div>
-                    <div class="cruiserStatusWrap shipWrap">
-                        <div class="cruiserStatus">
-                            <img src="./images/cruiserRight.png" alt="cruiser right">
-                        </div>
-                        <div class="coordStatus">
-                            <div class="cruiser1"></div>
-                            <div class="cruiser2"></div>
-                            <div class="cruiser3"></div>
-                        </div>
-                    </div>
-                    <div class="submarineStatusWrap shipWrap">
-                        <div class="submarineStatus">
-                            <img src="./images/submarineRight.png" alt="submarine right">
-                        </div>
-                        <div class="coordStatus">
-                            <div class="submarine1"></div>
-                            <div class="submarine2"></div>
-                            <div class="submarine3"></div>
-                        </div>
-                    </div>
-                    <div class="destroyerStatusWrap shipWrap">
-                        <div class="destroyerStatus">
-                            <img src="./images/destroyerRight.png" alt="destroyer right">
-                        </div>
-                        <div class="coordStatus">
-                            <div class="destroyer1"></div>
-                            <div class="destroyer2"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="actionStatus">
-                    <div class="indicatorBox">
-                        <div class="turnIndicator"></div>
-                    </div>
-                    <div class="infoBox">
-                        <div class="instruction"></div>
-                        <div class="status"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="gameplayZone">
-            <div class="videoResponse">
-                <div class="matchHistory">
-                    <div class="leftReport"></div>
-                    <div class="rightReport"></div>
-                </div>
-                <div class="matchOutcome">
-                    <div class="leftOutcome"></div>
-                    <div class="rightOutcome"></div>
-                </div>
-            </div>
-
-            <div class="playerData">
-                <div class="scores"></div>
-                <div class="coordDataWrapper"></div>
-            </div>
-
-            <div class="playzoneWrap">
-                <div class="xScale">
-                    <div class="fleetScale"></div>
-                    <div class="attackScale"></div>
-                </div>
-
-                <div class="playzone">
-                    <div class="fleet">
-                        <div class="fleetGrid"></div>
-                    </div>
-                    <div class="yScale">
-                        <div class="midScale"></div>
-                    </div>
-                    <div class="attackArea">
-                        <div class="attackGrid"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </body>
 </html>
