Create intro page

--- a/src/template.html
+++ b/src/template.html
@@ -3,11 +3,22 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
 </head>
 <body>
+    <div id="introBackground">
+        <div class="askTextContainer">
+            <p class="askText">Hi, I am <span class="aiName">AURA</span>,  <span class="myName">Siddharth's</span> personal assistant!</p>
+            <p class="askText">You can ask me anything about him.</p>
+        </div>
+        <div class="aiBoxBackground">
+            <div id="inputArea">
+                <button class="askButton"><span class="sparkle">✧</span><span class="postSparkle">Ask a question</span></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
