--- a/src/template.html
+++ b/src/template.html
@@ -1,24 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Momo+Trust+Display&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PORTFOLIO</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="introBackground">
-        <div class="askTextContainer">
-            <p class="askText">Hi, I am <span class="aiName">AURA</span>,  <span class="myName">Siddharth's</span> personal assistant!</p>
-            <p class="askText">You can ask me anything about him.</p>
+      <div class="askTextContainer">
+        <p class="askText">
+          Hi, I am <span class="aiName">AURA</span>,
+          <span class="myName">Siddharth's</span> personal assistant!
+        </p>
+        <p class="askText">You can ask me anything about him.</p>
+      </div>
+      <div class="aiBoxBackground">
+        <div id="inputArea">
+          <button class="askButton">
+            <span class="sparkle">✧</span
+            ><span class="postSparkle">Ask a question</span>
+          </button>
         </div>
-        <div class="aiBoxBackground">
-            <div id="inputArea">
-                <button class="askButton"><span class="sparkle">✧</span><span class="postSparkle">Ask a question</span></button>
-            </div>
-        </div>
+      </div>
+      <div class="continueToProfile">
+        <span class="continueText">or, you can visit his portfolio</span>
+        <button class="goButton">
+          <img src="./images/arrow-right.svg" alt="go" />
+        </button>
+      </div>
     </div>
-</body>
+  </body>
 </html>
