--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="continueToProfile">
-        <span class="continueText">or, you can visit his portfolio</span>
+        <span class="continueText">VIEW PROFILE</span>
         <button class="goButton">
           <img src="./images/arrow-right.svg" alt="go" />
         </button>
